--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html data-init="no-js">
 <head>
 <meta charset="UTF-8" />
-<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-database-compat.js"></script>
-
+<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app-compat.js"></script> <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-database-compat.js"></script>
 <title>Eyes</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="application-name" content="SugarCube" />
@@ -285,51 +283,56 @@ $(document).on(&#39;:passagedisplay&#39;, function () {
 });
 &lt;&lt;/script&gt;&gt;
 </tw-passagedata><tw-passagedata pid="14" name="SubmitEmotions" tags="" position="1850,825" size="100,100">:: SubmitEmotions
-&lt;&lt;set $fear to 0&gt;&gt;
-&lt;&lt;set $curiosity to 0&gt;&gt;
+&lt;&lt;set $fear = 0&gt;&gt;
+&lt;&lt;set $curiosity = 0&gt;&gt;
 
 &lt;p&gt;Rate your feelings:&lt;/p&gt;
 
 Fear:
-&lt;input id=&quot;fearSlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot; 
+&lt;input id=&quot;fearSlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot;
   oninput=&quot;document.getElementById(&#39;fearValue&#39;).textContent = this.value; SugarCube.State.variables.fear = parseInt(this.value);&quot;&gt;
 &lt;span id=&quot;fearValue&quot;&gt;0&lt;/span&gt;&lt;br&gt;
 
 Curiosity:
-&lt;input id=&quot;curiositySlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot; 
+&lt;input id=&quot;curiositySlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot;
   oninput=&quot;document.getElementById(&#39;curiosityValue&#39;).textContent = this.value; SugarCube.State.variables.curiosity = parseInt(this.value);&quot;&gt;
 &lt;span id=&quot;curiosityValue&quot;&gt;0&lt;/span&gt;&lt;br&gt;
 
 &lt;button id=&quot;submitBtn&quot; disabled&gt;Submit Emotions&lt;/button&gt;
 
 &lt;&lt;script&gt;&gt;
-$(document).on(&#39;:passagedisplay&#39;, function () {
+$(document).on(&#39;:passagedisplay.SubmitEmotions&#39;, function () {
   const btn = document.getElementById(&#39;submitBtn&#39;);
 
-  function tryEnableSubmit() {
+  // Ensure click handler is attached only once
+  btn.replaceWith(btn.cloneNode(true));
+  const newBtn = document.getElementById(&#39;submitBtn&#39;);
+
+  function checkReady() {
     if (typeof window.submitEmotion === &#39;function&#39; &amp;&amp; typeof Engine !== &#39;undefined&#39;) {
-      btn.disabled = false;
-
-      btn.addEventListener(&#39;click&#39;, () =&gt; {
-        const fear = SugarCube.State.variables.fear || 0;
-        const curiosity = SugarCube.State.variables.curiosity || 0;
-
-        window.submitEmotion(fear, curiosity)
-          .then(() =&gt; {
-            alert(&#39;✅ Emotions submitted!&#39;);
-            Engine.play(&#39;EmotionAggregate&#39;);
-          })
-          .catch(e =&gt; {
-            alert(&#39;❌ Submission failed.&#39;);
-            console.error(e);
-          });
-      });
+      newBtn.disabled = false;
     } else {
-      setTimeout(tryEnableSubmit, 300);
+      setTimeout(checkReady, 300);
     }
   }
+  checkReady();
 
-  tryEnableSubmit();
+  newBtn.addEventListener(&#39;click&#39;, () =&gt; {
+    newBtn.disabled = true;  // Prevent re-clicks
+
+    const fear = SugarCube.State.variables.fear || 0;
+    const curiosity = SugarCube.State.variables.curiosity || 0;
+
+    window.submitEmotion(fear, curiosity)
+      .then(() =&gt; {
+        alert(&#39;✅ Emotions submitted!&#39;);
+        Engine.play(&#39;EmotionAggregate&#39;);
+      })
+      .catch(e =&gt; {
+        alert(&#39;❌ Submission failed: &#39; + e.message);
+        console.error(e);
+      });
+  });
 });
 &lt;&lt;/script&gt;&gt;
 </tw-passagedata><tw-passagedata pid="15" name="FearEnding" tags="" position="2050,800" size="100,100">The collective fear overwhelmed the moment.  
