--- a/index.html
+++ b/index.html
@@ -288,38 +288,38 @@ $(document).on(&#39;:passagedisplay&#39;, function () {
 
 &lt;p&gt;Rate your feelings:&lt;/p&gt;
 
-Fear:
-&lt;input id=&quot;fearSlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot;
+Fear: 
+&lt;input id=&quot;fearSlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot; 
   oninput=&quot;document.getElementById(&#39;fearValue&#39;).textContent = this.value; SugarCube.State.variables.fear = parseInt(this.value);&quot;&gt;
 &lt;span id=&quot;fearValue&quot;&gt;0&lt;/span&gt;&lt;br&gt;
 
-Curiosity:
-&lt;input id=&quot;curiositySlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot;
+Curiosity: 
+&lt;input id=&quot;curiositySlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot; 
   oninput=&quot;document.getElementById(&#39;curiosityValue&#39;).textContent = this.value; SugarCube.State.variables.curiosity = parseInt(this.value);&quot;&gt;
 &lt;span id=&quot;curiosityValue&quot;&gt;0&lt;/span&gt;&lt;br&gt;
 
 &lt;button id=&quot;submitBtn&quot; disabled&gt;Submit Emotions&lt;/button&gt;
 
 &lt;&lt;script&gt;&gt;
-$(document).on(&#39;:passagedisplay.SubmitEmotions&#39;, function () {
-  const btn = document.getElementById(&#39;submitBtn&#39;);
+$(document).on(&#39;:passagedisplay&#39;, function (ev) {
+  if (ev.passage !== &#39;SubmitEmotions&#39;) return;
 
-  // Ensure click handler is attached only once
-  btn.replaceWith(btn.cloneNode(true));
-  const newBtn = document.getElementById(&#39;submitBtn&#39;);
+  const btnOld = document.getElementById(&#39;submitBtn&#39;);
+  if (!btnOld) return;
+  const btn = btnOld.cloneNode(true);
+  btnOld.parentNode.replaceChild(btn, btnOld);
 
-  function checkReady() {
+  function enableButton() {
     if (typeof window.submitEmotion === &#39;function&#39; &amp;&amp; typeof Engine !== &#39;undefined&#39;) {
-      newBtn.disabled = false;
+      btn.disabled = false;
     } else {
-      setTimeout(checkReady, 300);
+      setTimeout(enableButton, 300);
     }
   }
-  checkReady();
+  enableButton();
 
-  newBtn.addEventListener(&#39;click&#39;, () =&gt; {
-    newBtn.disabled = true;  // Prevent re-clicks
-
+  btn.addEventListener(&#39;click&#39;, () =&gt; {
+    btn.disabled = true;
     const fear = SugarCube.State.variables.fear || 0;
     const curiosity = SugarCube.State.variables.curiosity || 0;
 
@@ -329,7 +329,7 @@ $(document).on(&#39;:passagedisplay.SubmitEmotions&#39;, function () {
         Engine.play(&#39;EmotionAggregate&#39;);
       })
       .catch(e =&gt; {
-        alert(&#39;❌ Submission failed: &#39; + e.message);
+        alert(&#39;❌ Submission failed: &#39; + (e.message || e));
         console.error(e);
       });
   });
