--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html data-init="no-js">
 <head>
 <meta charset="UTF-8" />
-<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app-compat.js"></script> <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-database-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-database-compat.js"></script>
+
 <title>Eyes</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="application-name" content="SugarCube" />
@@ -288,38 +290,38 @@ $(document).on(&#39;:passagedisplay&#39;, function () {
 
 &lt;p&gt;Rate your feelings:&lt;/p&gt;
 
-Fear: 
+Fear:
 &lt;input id=&quot;fearSlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot; 
-  oninput=&quot;document.getElementById(&#39;fearValue&#39;).textContent = this.value; SugarCube.State.variables.fear = parseInt(this.value);&quot;&gt;
+  oninput=&quot;document.getElementById(&#39;fearValue&#39;).textContent = this.value; 
+           SugarCube.State.variables.fear = parseInt(this.value);&quot;&gt;
 &lt;span id=&quot;fearValue&quot;&gt;0&lt;/span&gt;&lt;br&gt;
 
-Curiosity: 
+Curiosity:
 &lt;input id=&quot;curiositySlider&quot; type=&quot;range&quot; min=&quot;0&quot; max=&quot;5&quot; value=&quot;0&quot; 
-  oninput=&quot;document.getElementById(&#39;curiosityValue&#39;).textContent = this.value; SugarCube.State.variables.curiosity = parseInt(this.value);&quot;&gt;
+  oninput=&quot;document.getElementById(&#39;curiosityValue&#39;).textContent = this.value; 
+           SugarCube.State.variables.curiosity = parseInt(this.value);&quot;&gt;
 &lt;span id=&quot;curiosityValue&quot;&gt;0&lt;/span&gt;&lt;br&gt;
 
 &lt;button id=&quot;submitBtn&quot; disabled&gt;Submit Emotions&lt;/button&gt;
 
 &lt;&lt;script&gt;&gt;
-$(document).on(&#39;:passagedisplay&#39;, function (ev) {
-  if (ev.passage !== &#39;SubmitEmotions&#39;) return;
+$(document).one(&#39;:passagedisplay&#39;, function () {
+  const btn = document.getElementById(&#39;submitBtn&#39;);
 
-  const btnOld = document.getElementById(&#39;submitBtn&#39;);
-  if (!btnOld) return;
-  const btn = btnOld.cloneNode(true);
-  btnOld.parentNode.replaceChild(btn, btnOld);
+  if (!btn) return;
 
-  function enableButton() {
+  // Wait until Firebase + Engine are ready
+  function waitForReady() {
     if (typeof window.submitEmotion === &#39;function&#39; &amp;&amp; typeof Engine !== &#39;undefined&#39;) {
       btn.disabled = false;
     } else {
-      setTimeout(enableButton, 300);
+      setTimeout(waitForReady, 300);
     }
   }
-  enableButton();
+  waitForReady();
 
+  // Click handler
   btn.addEventListener(&#39;click&#39;, () =&gt; {
-    btn.disabled = true;
     const fear = SugarCube.State.variables.fear || 0;
     const curiosity = SugarCube.State.variables.curiosity || 0;
 
