--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ getAverageEmotion().then(function(result) {
   }
 });
 &lt;&lt;/script&gt;&gt;
-</tw-passagedata><tw-passagedata pid="17" name="NeutralEnding" tags="" position="2050,1050" size="100,100">I stood frozen at the threshold, heart thundering, the fire crackling behind me, her shadow drawing closer. Her father loomed, hollow-eyed and silent. I gripped the burning stick tighter—but didn’t move. She looked at me—not with hunger, but something softer. “You’re not like the others,” she said. I didn’t know what that meant, and I wasn’t sure I wanted to. The house felt older now, tired. I stepped back, out into the rain, never breaking her gaze. She didn’t follow. Neither did he. I walked until the trees swallowed me again—unsure if I had escaped something terrible, or left something even lonelier behind.
+</tw-passagedata><tw-passagedata pid="17" name="NeutralEnding" tags="" position="2050,1050" size="100,100">I burst through the door, the torch still blazing in my hand, shoving her back into the shadows as the flame caught the dry curtains—then the walls. Her scream twisted into something inhuman as the house lit up like a pyre. I ran, blind and bloody, through the rain, not stopping until the house was a flicker behind me. I collapsed in the grassland, gasping, alive. But then—I noticed the silence. The cold no longer bit. I didn&#39;t feel the rain drops either. I stood up, confused. in the reflection of a puddle, I saw myself, without eyes.
 
 
 &lt;p&gt;Collected from all players:&lt;/p&gt;
